--- a/styles/login.css
+++ b/styles/login.css
@@ -125,7 +125,7 @@
 		top: 0;
 		bottom: 0;
 		left: 0;
-    background-image: url("/logos/5-X%202023.png");
+    background-image: url("/logos/logo.png");
 }
 
 .greytext {
