Change ntsad font

--- a/styles/ntsad.css
+++ b/styles/ntsad.css
@@ -1,7 +1,7 @@
-@import "https://fonts.googleapis.com/css2?family=Bruno+Ace+SC";
+@import url('https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 body, * {
-	font-family: "Bruno Ace SC", monospace;
+	font-family: "Spectral", monospace;
 	text-align: center;
 }
 
@@ -72,5 +72,5 @@ body {
 
 @media print {
 	body { display: none; }
-	html::after { content: "This page cannot be printed. Please access digitally at https://5-x-2023.gohjy.repl.co/digicard"; display: block; text-align: left;}
+	html::after { content: "This page cannot be printed. Please access digitally at https://tnsweb.github.io/digicard"; display: block; text-align: left;}
 }
